heredoc + un peu de norme

--- a/minilib/Makefile
+++ b/minilib/Makefile
@@ -25,7 +25,9 @@ FILES = mini_charfind \
 	mini_itoa \
 	mini_calloc \
 	mini_bzero \
-	*mini_tolower
+	mini_tolower \
+	mini_tokendelone \
+	mini_tokenfind
 
 S = $(foreach f, $(FILES), $(f).c)
 OBJ = $(S:.c=.o)
